--- a/Style/style.css
+++ b/Style/style.css
@@ -106,7 +106,7 @@ p {
     background: #111111;
     top: 0;
     right: -100%;
-    height: 100vh;
+    height: 120vh;
     width: 100%;
     z-index: 0;
     font-family: 'VALORANT', sans-serif;
@@ -114,6 +114,7 @@ p {
 }
 
 .menu li {
+
     display: block;
     padding: 20px;
 }
@@ -126,6 +127,10 @@ p {
 
 .menu--open {
     right: 0;
+}
+
+.menu li:first-child {
+    padding-top: 0;
 }
 
 
@@ -206,6 +211,8 @@ p {
     overflow: hidden;
 }
 
+
+
 .bottom-arrow {
     border-bottom: 1px solid white;
 }
@@ -283,6 +290,7 @@ p {
     line-height: 1.7;
 }
 
+
 .content-article h2 span {
 
     display: flex;
@@ -322,7 +330,7 @@ p {
     margin-top: 20px;
     margin-left: 40px;
     margin-right: 20px;
-    
+
 }
 
 
@@ -351,7 +359,7 @@ p {
 .container-articles img {
     padding: 10px;
     transition: all ease-in-out 0.5s;
-    
+
 }
 
 .container-articles a:last-child {
@@ -364,6 +372,48 @@ p {
     transform: scale(1);
 }
 
+
+/* ! BACK TO TOP BUTTON */
+
+
+.top {
+    display: flex;
+    justify-content: center;
+}
+
+.to-top {
+    color: white;
+    padding-top: 3.8em;
+    display: inline-block;
+    position: relative;
+    border-color: white;
+    text-decoration: none;
+    transition: all .3s ease-out;
+}
+
+.to-top:before {
+    content: '▲';
+    font-size: 20px;
+    position: absolute;
+    top: 0;
+    border: solid 0.13em white;
+    margin-left: -0.56em;
+    border-radius: 10em;
+    width: 25px;
+    height: 28px;
+    line-height: 1em;
+    border-color: inherit;
+    transition: transform .5s ease-in;
+}
+
+.to-top:hover {
+    color: #ff4655;
+    border-color: #ff4655;
+}
+
+.to-top:hover:before {
+    transform: rotate(360deg);
+}
 
 
 
@@ -447,13 +497,13 @@ p {
 }
 
 
-.bottom-footer{
+.bottom-footer {
     display: flex;
     flex-direction: row;
     align-items: flex-end;
 }
 
-#copy{
+#copy {
     padding-right: 20px;
     padding-bottom: 20px;
     color: #737373;
@@ -468,7 +518,7 @@ p {
     height: 100%;
 }
 
-.footer-sections li a{
+.footer-sections li a {
     text-decoration: none;
     color: #737373;
     line-height: 1.3;
@@ -491,6 +541,8 @@ p {
 /* ! DESKTOP */
 
 @media screen and (min-width: 800px) {
+
+
 
     /* ! HEADER */
 
@@ -539,6 +591,9 @@ p {
         padding: 0;
     }
 
+    .logo-right {
+        display: none;
+    }
 
 
     /* ! HERO */
@@ -559,21 +614,76 @@ p {
         margin-right: -47px;
     }
 
+    .intro-title h2 {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
 
-
-    /* ! INTRO SECTION */
-
-
-
-
-
-
-    /* ! NEWS */
 
 }
 
 
 
+@media screen and (min-width: 1024px) {
+
+    .logo-right {
+        display: block;
+    }
+
+
+    .intro-title h2 {
+        font-size: 40px;
+        padding-top: 80px;
+        padding-bottom: 60px;
+    }
+
+    .container-presentation {
+        margin: 0 15%;
+    }
+
+    .news-title {
+        margin: 0 auto;
+        padding-bottom: 40px;
+    }
+
+
+    .content-article h2 {
+        text-align: center;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+
+
+    .content-article p {
+        width: 100%;
+        font-size: 18px;
+        padding-right: 10%;
+        padding-left: 10%;
+    }
+
+    .news-title h2 {
+        text-align: center;
+    }
+
+}
+
+
+@media screen and (max-width: 900px) and (max-height: 700px) and (orientation: landscape) {
+
+    .hero:after {
+        top: 31px;
+    }
+
+    #video-back {
+        height: 100%;
+        top: 31px;
+    }
+
+    .bottom-arrow {
+        margin-top: 31px;
+    }
+
+}
 
 
 
