--- a/Style/news.css
+++ b/Style/news.css
@@ -4,12 +4,26 @@
     width: 100%;
     height: 100%;
     background: #ECECEC;
-    
 }
 
 .img-article {
-    margin: 20px;
+    margin: 80px 20px 40px 20px;
     overflow: hidden;
+}
+
+@media screen and (min-width: 800px) {
+    .img-article {
+        margin: 120px 40px 40px 40px;
+    }
+
+    .article-one,
+    .article-two,
+    .article-three,
+    .article-four {
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+
 }
 
 .articles-section p {
@@ -49,11 +63,11 @@
 .article-two,
 .article-three,
 .article-four {
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
-.news-title{
+.news-title {
     position: relative;
     display: flex;
     flex-direction: row;
@@ -63,12 +77,12 @@
     margin-right: 0;
 }
 
-.news-title h2{
+.news-title h2 {
     font-size: 50px;
     font-family: "VALORANT", sans-serif;
 }
 
-.img-article img{
+.img-article img {
     margin-top: 20px;
 }
 
@@ -80,11 +94,20 @@
     border-right: 2px solid #000;
 }
 
+.visible {
+    display: block;
+    bottom: 10px;
+    left: 50%;
+    border-top: 2px solid white;
+    border-right: 2px solid white;
+
+}
+
 .arrow-left {
     transform: rotate(-135deg);
 }
 
-.articles-section a{
+.articles-section a {
     padding-bottom: 30px;
 }
 
@@ -99,6 +122,9 @@
 }
 
 
+
+
+
 @keyframes slideInFromLeft {
     0% {
         transform: translateX(-100%);
@@ -109,33 +135,92 @@
     }
 }
 
-.articles-section{
-animation: 0.7s ease-in-out 0s 1 slideInFromLeft;
+.articles-section {
+    animation: 0.7s ease-in-out 0s 1 slideInFromLeft;
 }
 
-.articles-section h3{
+.articles-section h3 {
     margin-bottom: -30px;
     padding-bottom: 30px;
 }
 
 @keyframes navSlideInFromTop {
-    0%{
+    0% {
         transform: translateY(-100%);
     }
 
-    100%{
+    100% {
         transform: translateY(0);
     }
 }
 
-.header{
+.header {
     animation: 0.7s ease-in-out 0s 1 navSlideInFromTop;
 }
 
-.article-four{
+.article-four {
     padding-bottom: 30px;
 }
 
-.footer-section{
+.footer-section {
     margin-bottom: 20px;
+}
+
+
+@media screen and (min-width: 800px) {
+
+    .articles-section {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    .articles-section p {
+        font-size: 18px;
+    }
+
+    .top-fixed {
+        color: #0f1923;
+        position: fixed;
+        bottom: 0;
+        right: 30px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .articles-section {
+        padding-left: 15%;
+        padding-right: 15%;
+    }
+
+    .articles-section p {
+        font-size: 20px;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    .articles-section h3 {
+        font-size: 22px;
+    }
+
+    .arrow-left {
+        width: 20px;
+        height: 20px;
+    }
+
+    .arrow-left:hover {
+
+        width: 30px;
+        height: 30px;
+
+
+    }
+
+    .top-fixed {
+        position: fixed;
+        bottom: 0;
+        right: 30px;
+    }
+
+   
+
 }
