--- a/Style/form.css
+++ b/Style/form.css
@@ -1,10 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
 
 form {
   position: relative;
@@ -12,16 +5,14 @@ form {
   width: 80%;
   margin-left: 35px;
   margin-right: 35px;
- /*  border-top: 3px solid #ff4655;
-  border-right: 3px solid #ff4655;
-  border-radius: 8%; */
+
 }
 
-
+/* 
 label {
   color: white;
   font-family: "Montserrat", sans-serif;
-}
+} */
 
 input[type="text"],
 input[type="email"],
@@ -36,16 +27,27 @@ select {
   box-sizing: border-box;
 }
 
-/* input[type="submit"] {
-  width: 70%;
-  background-color: #4caf50;
+button[type="submit"] {
+  width: 30%;
+  background-color: #ff4655;
   color: white;
   padding: 14px 20px;
   margin: 8px 15%;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-} */
+}
+
+button[type="reset"] {
+  width: 30%;
+  background-color: white;
+  color: black;
+  padding: 14px 20px;
+  margin: 8px 15%;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
 
 p {
   color: white;
@@ -58,8 +60,8 @@ fieldset {
   margin-bottom: 15px;
   border: 1px solid #ff4655;
 }
-
+/* 
 button {
   position: relative;
   bottom: 30px;
-}
+} */
