--- a/Style/players.css
+++ b/Style/players.css
@@ -23,22 +23,21 @@ section, main{
     color: #ff4655;
 }
 
+
+
 main{
-    background-image: url(../Contents/img/banner.png);
-    background-repeat: no-repeat;
-    background-size: 100rem 130px;
-    background-position: center top;
     font-family: 'VALORANT', sans-serif;
     padding: 2% 5% 0 5%
 }
 main h2{
-    
+    width:380px;
     font-size: 35px;
     color: white;
     margin-top: 35px;
     padding:20px 20px 5px 60px;
     border-radius: 10px;
     border-top: 2px solid white;
+    margin: 20px auto;
 }
 .team-list-item img{
     width: 180px;
@@ -116,28 +115,85 @@ main #retired{
     opacity: 100%;
     z-index: 100;
     position:fixed;
-    background-color: #ff4655;
+    background-color: #0f1923;
+    border-top: #ff4655 3px solid;
+    border-right: #ff4655 3px solid;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     align-self: center;
     justify-self: center;
-    width: 70vw;
-    height: 70vh;
-    top: 18%;
+    width: 80vw;
+    height: 90vh;
+    top:7%;
+    border-radius:20px;
 }
 #selected-player .close-profile
 {
+    position:absolute;
     display: block;
     width:25px;
-    margin: 20px;
-    top: 0;
+    top: 10px;
+    right:10px;
+}
+
+#selected-player p{
+    color: #ff4655 !important;
+    font-size: 16px !important;
+    padding: 8px 20px !important;
+}
+
+#selected-player span, #selected-player li,#selected-player #player-info-bio{
+    color: white !important;
+    font-size: 14px !important;
+    padding:5px 20px!important;
+}
+
+#selected-player #player-info-bio{
+    padding: 5px 30px 5px 30px!important;
+    text-align: center;
+}
+
+.player-info-inline{
+    width: 100% !important;
+    display: inline-flex;
+    align-content: center;
+    justify-content: center;
+}
+
+#selected-player h2{
+    width: auto !important;
+    font-size: 22px !important;
+    margin-top: 5px !important;
+    padding: 10px 15px !important;
+    top: 50px;
+    position: absolute;
+}
+
+#selected-player #player-info-pfp{
+    width:180px;
+    border-radius:20px;
+    background-color: white;
+    border-top: #ff4655 3px solid;
+    border-right: #ff4655 3px solid;
+}
+#selected-player #player-info-nationality{
+    width:30px;
+    height: auto;
+    border-radius:5px;
+    margin: 0 20px !important;
+    padding: 0 !important;
 }
 
 .gamerTag{
     font-size: 18px;
     color: white;
+    animation: toWhite 100ms ease-in-out forwards;
+}
+
+.player-list-item:active .gamerTag{
+    animation: toRed 100ms ease-in-out forwards;
 }
   p.player-name{
     padding: 0 0 10px 0 !important;
@@ -178,5 +234,23 @@ main #retired{
     100% {
         transform: scaleY(0);
         opacity: 0;
+    }
+}
+
+@keyframes toRed {
+    0% {
+        color: white;
+    }
+    100% {
+        color: #ff4655;
+    }
+}
+
+@keyframes toWhite {
+    0% {
+        color: inherit;
+    }
+    100% {
+        color: white;
     }
 }
