--- a/Style/news.css
+++ b/Style/news.css
@@ -169,6 +169,10 @@
 
 @media screen and (min-width: 800px) {
 
+    article{
+        padding-top: 1px;
+    }
+
     .articles-section {
         padding-left: 10%;
         padding-right: 10%;
