--- a/Style/form.css
+++ b/Style/form.css
@@ -5,14 +5,18 @@ form {
   width: 80%;
   margin-left: 35px;
   margin-right: 35px;
+  
+
+
 
 }
 
-/* 
-label {
+
+ 
+label  { 
   color: white;
-  font-family: "Montserrat", sans-serif;
-} */
+} 
+
 
 input[type="text"],
 input[type="email"],
@@ -60,8 +64,38 @@ fieldset {
   margin-bottom: 15px;
   border: 1px solid #ff4655;
 }
-/* 
-button {
+
+label[for="tournament"] {
+  display: block;
+  margin-top: 10px;
+ /*  margin-bottom: 10px; */ 
+}
+
+textarea {
+  width: 100%;
+  height: 100px;
+  border-radius: 4px;
+}
+
+input::placeholder {
+  font-family: 'VALORANT', sans-serif;
+
+}
+/* .tournament-item {
+  float: left;
+  padding: 5px;
+
+}
+
+input[name="tournaments"] {
+  float: right;
+  margin-right: 50%;
+  clear: right;
+} */
+
+
+
+/* button {
   position: relative;
   bottom: 30px;
-} */
+}  */
