--- a/Style/gallery.css
+++ b/Style/gallery.css
@@ -1,4 +1,4 @@
-.gallery-body {
+body {
     background-color: #ECECEC;
 }
 .gallery img {
@@ -29,14 +29,13 @@ figcaption {
     position: absolute;
     left: 6px;
     bottom: 8px;
-    padding: 8px 6px 4px 4px;
-    background-color: rgba(0, 0, 0, 0.15);
-    box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.15);
+    padding: 6px 8px;
+    background-color: rgba(0, 0, 0, 0.4);
     text-shadow: 1px 1px 1px black;
     color: white;
     visibility: hidden;
     width: fit-content;
-    border-radius: 4px;
+    border-radius: 6px;
     font-size: 12px;
 }
 img:hover ~ figcaption {
@@ -74,6 +73,7 @@ img:hover {
     }
     figcaption {
         position: absolute;
+        left: 7px;
         bottom: 10px;
     }
 }
