added links to our github

--- a/Style/style.css
+++ b/Style/style.css
@@ -897,6 +897,10 @@ p {
         margin-left: 82px;
     }
 
+    .team-levelup a{
+        text-decoration: none;
+        color: #737373;
+    }
 
 
 
