--- a/Style/form.css
+++ b/Style/form.css
@@ -160,6 +160,11 @@ div.form-container {
   border-right: 3px solid var(--red);
 }
 
-
+@media screen and (min-width: 899.99px) {
+  form {
+    width: 50%;
+    margin-left: 25%;
+  }
+}
 
  
