--- a/Style/players.css
+++ b/Style/players.css
@@ -340,7 +340,9 @@ main #retired{
     font-size:18px !important;
 }
 
-#selected-player span, #selected-player li, #selected-player #player-info-bio{
+#selected-player span,
+#selected-player li,
+#selected-player #player-info-bio{
     font-size:15px !important;
     }
 #selected-player h2{
@@ -394,10 +396,16 @@ main #retired{
         flex-direction: column;
         margin: 20px 30px!important;
         background-color: #000;
+        transition: all ease-in-out 0.5s;
     }
 
     .player-list-item *{
         display: block;
+    }
+
+    .player-list-item:hover{
+        
+    box-shadow: 0px 0px 20px 5px var(--red);
     }
 
     .player-name-heading{
@@ -411,17 +419,22 @@ main #retired{
         position:absolute !important;
         top: 30px;
         margin-bottom: 25px !important;
-        margin-top: 30px !important;
-        font-size: 36px !important;
+        margin-top: 20px !important;
+        font-size: 34px !important;
         padding:15px !important;
     }
     #selected-player #player-info-pfp{
         margin-top: 0 !important;
-        width:340px;
-        height:340px;
-        position: absolute;
-        top: 150px;
-        left: 100px;
+        width:280px;
+        height:280px;
     }
+
+    #selected-player{
+        width: 50vw;
+        height: 84vh;
+        top:10%;
+        border-radius:20px;
+    }
+
 
 }
