--- a/Style/style.css
+++ b/Style/style.css
@@ -501,7 +501,7 @@ p {
     width: 100%;
     min-width: 300px;
     height: 320px;
-    background-image: url("/tournaments.jpg");
+    background-image: url("/Contents/img/tournaments.jpg");
     background-repeat: repeat-y;
     background-position: center;
     background-size: 120%;
